# foundation

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: blockether_foundation_project_setup.md  cclsp_analysis_code_rule.md  code_analysis_findings.md  code_style_and_conventions.md  core_project_rules.md  project_overview.md  project_preferences.md  ruthless_minimalism_implementation.md  suggested_commands.md  testing_guidelines.md  type_annotation_code_rule.md  type_checking_code_rule.md
dockerfiles/: python.dockerfile
src/blockether_foundation/: __init__.py  concurrency.py  errors.py  result.py  utils.py
src/blockether_foundation/ace/: playbook.py  program.py
src/blockether_foundation/ace/models/: base.py  playbook.py
src/blockether_foundation/ace/models/program/: analysis.py  generator.py  reflector.py
src/blockether_foundation/encoder/: __init__.py  potion.py
src/blockether_foundation/os/interfaces/telegram/: __init__.py  errors.py  handlers.py  models.py  telegram.py  usage.py  validation.py
tests/: conftest.py
tests/unit/: conftest.py  test_concurrency.py  test_encoder_potion.py  test_errors.py  test_result.py  test_utils.py
