[project]
name = "blockether-foundation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Blockether", email = "contact@blockether.com"}
]
license = {text = "MIT"}
classifiers = [
]

dependencies = [
    "agno>=2.2.1",
    "fastapi>=0.120.0",
    "llm-sandbox>=0.3.24",
    "model2vec>=0.7.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "scikit-learn>=1.5.0",
    "sqlalchemy>=2.0.44",
    "python-telegram-bot>=21.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blockether_foundation"]
include = [
    "src/blockether_foundation/assets/**",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not integration",  # Skip integration tests by default
    "--cov=blockether_foundation",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "unit: marks fast unit tests with mocked dependencies (default)",
    "integration: marks tests that make real LLM API calls (slow, skipped by default)",
    "slow: marks slow running tests",
]

[tool.coverage.run]
source = ["src/blockether_foundation"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["agno.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.poe.tasks]
test = "pytest tests/"
test-unit = "pytest tests/unit/ -m unit"
test-integration = "pytest tests/integration/ -m integration"
test-cov = "pytest --cov=blockether_foundation --cov-report=html --cov-report=term tests/"
test-watch = "pytest-watch tests/"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
type-check = "mypy src/"
check-all = ["format-check", "lint", "type-check", "test"]
